force-app/main/default/objects/RTV_POS_Item__c/RTV_POS_Item__c.object-meta.xml
<CustomObject>
    <description>POS数据明细</description>
    <label>RTV POS Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV POS Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>