force-app/main/default/objects/RTV_POS_Item__c/fields/IsMaterial__c.field-meta.xml
<CustomField>
    <fullName>IsMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否无实物退残</description>
    <label>IsMaterial</label>
    <type>Checkbox</type>
</CustomField>