force-app/main/default/objects/RTV_POS_Item__c/fields/RTV_POS_Data__c.field-meta.xml
<CustomField>
    <fullName>RTV_POS_Data__c</fullName>
    <label>RTV POS Data</label>
    <referenceTo>RTV_POS_Data__c</referenceTo>
    <relationshipLabel>RTV POS Items</relationshipLabel>
    <relationshipName>RTV_POS_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>