force-app/main/default/objects/RTV_POS_Item__c/fields/Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Size_Code__c</fullName>
    <label>Size Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>